# Gawee

./: .clangd  .gitignore  CLAUDE.md  README.en.md  README.ko.md  README.md  future.md  how.md  requirements.txt
back/: CMakeLists.txt  README.md  eval_priority_models.py  gawee_aot.cpp  gawee_eval.cpp  runtime_support.h
benchmarks/: README.md
cv/: cv_en.tex  intro_en.tex
docs/: arch.md  research_direction.md  to_fix.md  usage.md
front/: README.md  __init__.py
front/onnx_rewrite/: README.md  __init__.py  eval_rewrite.py  onnx_rewrite.md  report.md  rewrite.sh  run_onnx_rewrite.py  todo.md
front/onnx_rewrite/analysis/: __init__.py  audit.py
front/onnx_rewrite/checker/: __init__.py  op_checker.py
front/onnx_rewrite/core/: __init__.py  optimizer.py  pipeline.py
front/onnx_rewrite/passes/: __init__.py  cleanup.py  constant_folding.py  convert_matmul.py  eliminate_id.py  folder.py  passer.py  rewrite_bn.py  rewrite_gather.py  rewrite_gemm.py  rewrite_matmul.py  rewrite_pow.py
front/onnx_rewrite/runtime/: __init__.py  benchmark.py  rt_test.py  validation.py
front/onnx_rewrite/specs/: __init__.py  catalog.py
front/onnx_rewrite/utils/: __init__.py  cons.py  constants.py  io.py
gawee_ir/: graph.py  mapper.py  parser.py  translator.py
gawee_ir/analysis/: constants.py  cost.py  errors.py  shape.py
gawee_ir/constant/: ops.py  passes.py  value.py
gawee_ir/extraction/: attr_extractor.py
gawee_ir/passes/: canonicalize.py  constant_folding.py  conv_add_folding.py  conv_bn_folding.py  elim_identity.py  errors.py  folder.py  passer.py
gawee_ir/types/: torch_type.py
gawee_ir/utils/: load_resnet.py
middle/: CMakeLists.txt  README.md  TUTORIAL.md  delta.md
middle/include/gawee/: Graph.h  Parser.h
middle/mlir/: CMakeLists.txt  README.md  build.sh  output.mlir
middle/mlir/cmake/: FixGeneratedGaweeOps.cmake
middle/mlir/cmake_exercise/: CMakeLists.txt  README.md  order.md
middle/mlir/cmake_exercise/include/Conversion/: GaweePasses.h
middle/mlir/cmake_exercise/lib/Conversion/: BufferizePrep.cpp  DecomposeAggregatedLinalgOps.cpp  GaweeToLinalg.cpp  LinalgFusion.cpp  LinalgScheduling.cpp  LinalgTransform.cpp  LinalgVectorization.cpp  LinalgVerification.cpp
middle/mlir/cmake_exercise/src/: main.cpp
middle/mlir/cmake_exercise/tools/: exercise-opt.cpp
middle/mlir/docs/: GaweeToLinalg_Quiz.cpp  GaweeToLinalg_Summary.md  JSON_Schema.md  LLVMLowering_Quiz.cpp  LLVMLowering_Summary.md  LinalgToLoops_Quiz.md  LinalgToLoops_Summary.md  MLIREmitter_Quiz.cpp  MLIREmitter_Summary.md  ShellScript_BonusQuiz.md  ShellScript_Quiz.sh  ShellScript_Summary.md  UNet_TODO.md  gawee-opt_Quiz.cpp  gawee-opt_Summary.md  progress.md  progress_resnet.md  quiz_nlp_aot.md  todo.md
middle/mlir/docs/extension/: 00_Extension_Checklist.md  01_GaweeOps_Extension.td  02_GaweeToLinalg_Extension.cpp  03_MLIREmitter_Extension.cpp
middle/mlir/docs/kr/: CMakeLists_Study.md  MatMulLowering_Quiz.cpp  MatMulLowering_Summary.md  Phase2_Dialect_Quiz.cpp  Phase2_Dialect_Summary.md  Phase3_GaweeToLinalg_Quiz.cpp  Phase3_GaweeToLinalg_Summary.md  Phase4_GaweeOpt_Quiz.cpp  Phase4_GaweeOpt_Summary.md  Phase5_LinalgToLoops_Quiz.cpp  Phase5_LinalgToLoops_Summary.md  Phase6_MLIREmitter_Quiz.cpp  Phase6_MLIREmitter_Summary.md  Phase7_LLVMLowering_Quiz.cpp  Phase7_LLVMLowering_Summary.md  Phase8_ResNetExtension_Quiz.cpp  Phase8_ResNetExtension_Summary.md  SemanticOpLowering_Quiz.cpp  SemanticOpLowering_Summary.md
middle/mlir/include/Conversion/: GaweePasses.h
middle/mlir/include/Emit/: MLIREmitter.h  ONNXMLIREmitter.h
middle/mlir/include/Gawee/: GaweeDialect.h  GaweeDialect.td  GaweeOps.td
middle/mlir/lib/Conversion/: BufferizePrep.cpp  BufferizePrepScaffold.cpp  DecomposeAggregatedLinalgOps.cpp  GaweeToLinalg.cpp  LinalgFusion.cpp  LinalgFusionScaffold.cpp  LinalgScheduling.cpp  LinalgSchedulingScaffold.cpp  LinalgTransform.cpp  LinalgTransformScaffold.cpp  LinalgVectorization.cpp  LinalgVectorizationScaffold.cpp  LinalgVerification.cpp  LinalgVerificationScaffold.cpp
middle/mlir/lib/Emit/: MLIREmitter.cpp  ONNXMLIREmitter.cpp
middle/mlir/lib/Gawee/: GaweeDialect.cpp
middle/mlir/scripts/: full_pipeline.sh  to_llvm_ir.sh
middle/mlir/test/: add_only.mlir  llvm_test.mlir  matmul_test.mlir  simple_test.mlir  subset_graph.json
middle/mlir/tools/: gawee-onnx-translate.cpp  gawee-opt.cpp  gawee-translate.cpp
middle/src/: Graph.cpp  Parser.cpp  main.cpp
models/: resnet18.py
onnxdata/: resnet18.onnx
scripts/: check_shape.py  compare.py  cost_resnet.sh  cost_unet.sh  export_onnx.py  export_resnet18_onnx.py  export_vision_benchmarks.py  fetch_benchmark_models.py  inspect_model.py  inspect_onnx.py  lower_to_json.py  run_front_rewrite.py  save_models.sh  save_resnet.py  save_unet.py  save_yolo.py  setup.sh  show_cost.py  test_cost.py  test_lowering.py  test_parser.py  test_shape.py  test_translator.py  verify_benchmark_models.py  verify_onnxruntime.py
todo/: direction.md  middleend.md  onnx_rewrite.md  quantization.md
